# jean

./: .env.example  .gitignore  AGENTS.md  AGENT_RUNTIME_PLAN.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  RUST_DESIGN_PRINCIPLES.md  test_model.sh
examples/: Cargo.toml  filterable_file_list.rs
jean-cli/: Cargo.toml
jean-cli/src/: client.rs  conversation_logger.rs  main.rs
jean-server/: Cargo.toml
jean-server/src/: llm.rs  main.rs
jean-shared/: Cargo.toml
jean-shared/src/: lib.rs
speak-code-cli/: Cargo.toml
speak-code-cli/src/: client.rs  main.rs
speak-code-server/: Cargo.toml
speak-code-server/src/: llm.rs  main.rs
speak-code-shared/: Cargo.toml
speak-code-shared/src/: lib.rs
