[workspace]
resolver = "2"
members = [
    "speak-code-cli",
    "speak-code-server", 
    "speak-code-shared",
]

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"