[workspace]
resolver = "2"
members = [
    "jean-cli",
    "jean-server", 
    "jean-shared",
    "examples",
]

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"