[package]
name = "jean-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jean"
path = "src/main.rs"

[dependencies]
jean-shared = { path = "../jean-shared" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2.5"
glob = "0.3"
regex = "1.10"
walkdir = "2.4"
ignore = "0.4"