[package]
name = "jean-server"
version = "0.1.0"
edition = "2024"

[dependencies]
jean-shared = { path = "../jean-shared" }
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-openai = "0.24"
futures-util = "0.3"
dotenv = "0.15"