[package]
name = "speak-code-server"
version = "0.1.0"
edition = "2021"

[dependencies]
speak-code-shared = { path = "../speak-code-shared" }
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-openai = "0.26"
futures = "0.3"